# mole

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  LICENSE  README.md  example_script.py  mise.toml  mypy.ini  noxfile.py  pyproject.toml  use_cases.md
.cursor/rules/: cursor-rules-location.mdc  file-deletion-rule.mdc  import-management-rule.mdc  python-project-standards.mdc  python-testing-standards.mdc  testing-standards-rule.mdc
.github/workflows/: release.yml
src/funicular/: __init__.py
src/mole/: __init__.py  __main__.py  actions.py  airflow.py  assistant.py  blumeops.py  chores.py  cli.py  components.py  config.py  credentials.py  email.py  engine.py  event_loop.py  events.py  game.py  health.py  jira.py  journal.py  lyrics.py  meta.py  models.py  motion.py  notebook.py  projects.py  remote.py  romance.py  secrets.py  services.py  session.py  slate.py  store.py  summary.py  task.py  tasks.py  todoist.py  typer_command.py  typerfunc.py  voicememo.py  vpn.py  (+5 more)
src/your_project/: __main__.py  cli.py
stubs/: appdirs.pyi
stubs/todoist/: __init__.pyi  api.pyi  models.pyi
stubs/todoist/managers/: activity.pyi  archive.pyi  backups.pyi  biz_invitations.pyi  business_users.pyi  collaborator_states.pyi  collaborators.pyi  completed.pyi  emails.pyi  filters.pyi  generic.pyi  invitations.pyi  items.pyi  labels.pyi  live_notifications.pyi  locations.pyi  notes.pyi  projects.pyi  quick.pyi  reminders.pyi  sections.pyi  templates.pyi  uploads.pyi  user.pyi  user_settings.pyi
tests/: conftest.py  test_basic.py  test_chores.py  test_task.py  test_todoist_integration.py  test_tutorial.py  test_usecase_1_whack_a_mole.py  test_work.py  utils.py
