[project]
name = "mole"
version = "0.10.5"
description = "Personal automation tool"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pendulum>=3.0.0",
    "pydantic>=2.10.6",
    "pydub>=0.25.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "rich>=13.9.4",
    "todoist-api-python>=2.1.7",
    "typer>=0.15.1",
    "watchdog>=6.0.0",
]

[project.scripts]
mole = "mole:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "appdirs>=1.4.4",
    "pre-commit>=4.1.0",
    "pyright[nodejs]>=1.1.394",
    "pytest>=8.3.4",
]
